# AXIOM-Agentic-Development-Protocol

./: Cargo.toml  README.md
AIMs/: AIM-0001-axiom-improvement-methodology.md  AIM-0002-define-test-coverage-thresholds.md  AIM-0003-formalize-consensus-protocol-for-decision-making.md  AIM-0004-ontology-for-handoff-documents.md  AIM-0005-security-axioms-registry.md  AIM-0006-Meta-Orchestration-Design copy.md  AIM-0007-Formal-Verifciation-Design.md
architypes/: axiom-orchestrator.md  integration-tester.md  system-architect.md
project/: active-agents.md  config.txt  mission-statement.md
project/logs/: current-status.md
project/messaging-and-updates/: 002-human-to-orchestrator.md  003-orchestrator-to-system-architect.md
